# iroh

./: Cargo.toml  error_loop.sh
.github/workflows/: tests.yaml
iroh/: Cargo.toml
iroh-base/src/: key.rs
iroh-blobs/: Cargo.toml
iroh-blobs/src/: get.rs
iroh-dns-server/: Cargo.toml
iroh-dns-server/benches/: store.rs
iroh-dns-server/examples/: publish.rs  resolve.rs
iroh-dns-server/src/: lib.rs  store.rs
iroh-dns-server/src/store/: signed_packets.rs
iroh-gossip/src/: net.rs
iroh-metrics/: Cargo.toml
iroh-metrics/src/: lib.rs  metrics.rs  service.rs
iroh-net/: Cargo.toml
iroh-net-report/src/: lib.rs  reportgen.rs
iroh-net/bench/src/: lib.rs  quinn.rs
iroh-net/src/: config.rs  disco.rs  discovery.rs  dns.rs  endpoint.rs  lib.rs  magicsock.rs  metrics.rs  net.rs  netcheck.rs  node_info.rs  ping.rs  relay.rs  stun.rs  test_utils.rs  util.rs
iroh-net/src/discovery/: dns.rs  local_swarm_discovery.rs  pkarr.rs  pkarr_publish.rs
iroh-net/src/endpoint/: rtt_actor.rs
iroh-net/src/magicsock/: node_map.rs  relay_actor.rs  timer.rs  udp_conn.rs
iroh-net/src/magicsock/node_map/: best_addr.rs  node_state.rs
iroh-net/src/net/: ip.rs  ip_family.rs  udp.rs
iroh-net/src/netcheck/: reportgen.rs
iroh-net/src/netcheck/reportgen/: hairpin.rs  probes.rs
iroh-net/src/portmapper/: current_mapping.rs  mapping.rs  nat_pmp.rs  pcp.rs  upnp.rs
iroh-net/src/relay/: client.rs  client_conn.rs  clients.rs  codec.rs  http.rs  server.rs
iroh-net/src/relay/http/: client.rs  server.rs  streams.rs
iroh-net/src/relay/server/: actor.rs  http_server.rs
iroh-net/src/tls/: certificate.rs  verifier.rs
iroh-net/src/util/: futures.rs  task.rs  watchable.rs
iroh-net/src/util/task/: native.rs  wasm.rs
iroh-net/src/util/time/: native.rs  wasm.rs
iroh-relay/: Cargo.toml
iroh-relay/src/: client.rs  defaults.rs  dns.rs  quic.rs  server.rs
iroh-relay/src/client/: conn.rs  connect_relay.rs
iroh-relay/src/dns/: node_info.rs
iroh-relay/src/protos/: relay.rs
iroh-relay/src/server/: client.rs  http_server.rs
iroh-willow/: Cargo.toml
iroh-willow/examples/: bench.rs
iroh-willow/src/: form.rs  util.rs
iroh-willow/src/proto/: data_model.rs  grouping.rs
iroh-willow/src/util/: willow_serde.rs
iroh/src/: discovery.rs  endpoint.rs  magicsock.rs  test_utils.rs  tls.rs
iroh/src/discovery/: dns.rs  local_swarm_discovery.rs  static_provider.rs
iroh/src/discovery/pkarr/: dht.rs
iroh/src/magicsock/: relay_actor.rs  udp_conn.rs
