[workspace]
members = [
  "iroh",
  "iroh-blobs",
  "iroh-base",
  "iroh-dns-server",
  "iroh-gossip",
  "iroh-metrics",
  "iroh-net",
  "iroh-docs",
  "iroh-test",
  "iroh-net/bench",
  "iroh-cli"
]
resolver = "2"

[profile.release]
debug = true

[profile.optimized-release]
inherits = 'release'
debug = false
lto = true
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false


[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unused-async = "warn"

[patch.crates-io]
iroh-quinn = { git = "https://github.com/n0-computer/quinn.git", branch = "feat-wasm-2" }
iroh-quinn-udp = { git = "https://github.com/n0-computer/quinn.git", branch = "feat-wasm-2" }
iroh-quinn-proto = { git = "https://github.com/n0-computer/quinn.git", branch = "feat-wasm-2" }
# iroh-quinn = { path = "../iroh-quinn/quinn" }
# iroh-quinn-udp = { path = "../iroh-quinn/quinn-udp" }
# iroh-quinn-proto = { path = "../iroh-quinn/quinn-proto" }
rustls = { git = "https://github.com/Frando/rustls.git", branch = "0.21-wasm" }
