[package]
name = "iroh-net"
version = "0.20.0"
edition = "2021"
readme = "README.md"
description = "networking support for iroh"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["quic", "networking", "holepunching", "p2p"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.76"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow = { version = "1" }
base64 = "0.22.1"
backoff = "0.4.0"
bytes = "1"
netdev = { version = "0.29.0", optional = true }
der = { version = "0.7", features = ["alloc", "derive"] }
derive_more = { version = "1.0.0-beta.6", features = ["debug", "display", "from", "try_into", "deref"] }
flume = "0.11"
futures-buffered = "0.2.4"
futures-concurrency = "7.6.0"
futures-lite = "2.3"
futures-sink = "0.3.25"
futures-util = "0.3.25"
governor = "0.6.0"
hex = "0.4.3"
hickory-proto = { version = "0.24.0", default-features = false }
hickory-resolver = { version = "0.24.0", optional = true }
http = "1"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = "0.1.1"
igd-next = { version = "0.14.3", features = ["aio_tokio"], optional = true }
iroh-base = { version = "0.20.0", path = "../iroh-base", features = ["key"] }
libc = { version = "0.2.139", optional = true }
num_enum = "0.7"
once_cell = "1.18.0"
parking_lot = "0.12.1"
pin-project = "1"
pkarr = { git = "https://github.com/matheus23/pkarr.git", version = "2.0.0", default-features = false, features = ["async"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
quinn = { git = "https://github.com/n0-computer/quinn.git", branch = "feat-wasm-2", package = "iroh-quinn", version = "0.10.5", default-features = false, features = ["ring", "rustls"] }
quinn-proto = { git = "https://github.com/n0-computer/quinn.git", branch = "feat-wasm-2", package = "iroh-quinn-proto", version = "0.10.8", default-features = false, features = ["rustls"] }
quinn-udp = { git = "https://github.com/n0-computer/quinn.git", branch = "feat-wasm-2", package = "iroh-quinn-udp", version = "0.4.2", default-features = false }
rand = "0.8"
rand_core = "0.6.4"
rcgen = "0.12"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
ring = "0.17"
rustls = { version = "0.21.11", default-features = false, features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive", "rc"] }
smallvec = "1.11.1"
swarm-discovery = { version = "0.2.0", optional = true }
socket2 = { version = "0.5.3", optional = true }
stun-rs = "0.1.5"
surge-ping = { version = "0.8.0", optional = true }
thiserror = "1"
time = "0.3.20"
tokio = { version = "1", features = ["io-util", "macros", "sync", "rt"] }
tokio-rustls = { version = "0.24" }
tokio-tungstenite = { version = "0.21", default-features = false }
tokio-tungstenite-wasm = "0.3"
tokio-util = { version = "0.7", features = ["io-util", "io", "codec"] }
tokio-stream = { version = "0.1", optional = true, features = ["time"] }
tracing = "0.1"
tungstenite = "0.21"
url = { version = "2.4", features = ["serde"] }
webpki = { package = "rustls-webpki", version = "0.101.4", features = ["std"] }
webpki-roots = "0.25"
x509-parser = "0.15"
z32 = "1.0.3"

# wasm
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
web-time = { version = "1", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }

# iroh-relay
axum = { version = "0.7.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
regex = { version = "1.7.1", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
serde_with = { version = "3.3", optional = true }
toml = { version = "0.8", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio-rustls-acme = { version = "0.3", optional = true }

# metrics
iroh-metrics = { version = "0.20.0", path = "../iroh-metrics", default-features = false }
strum = { version = "0.26.2", features = ["derive"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.17.0"
netlink-sys = "0.8.5"
rtnetlink = "0.13.0"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13"
windows = { version = "0.51", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }

[dev-dependencies]
axum = { version = "0.7.4" }
clap = { version = "4", features = ["derive"] }
criterion = "0.5.1"
crypto_box = { version = "0.9.1", features = ["serde", "chacha20"] }
ntest = "0.9"
pretty_assertions = "1.4"
proptest = "1.2.0"
rand_chacha = "0.3.1"
testdir = "0.9.1"
tokio = { version = "1", features = ["io-util", "sync", "rt", "net", "fs", "macros", "time", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh-test = { path = "../iroh-test" }
iroh-net = { path = ".", features = ["iroh-relay"] }
serde_json = "1.0.107"
testresult = "0.4.0"

[[bench]]
name = "key"
harness = false

[build-dependencies]
duct = "0.13.6"

[features]
default = ["metrics", "native"]
iroh-relay = [
    "dep:tokio-rustls-acme",
    "dep:tokio-rustls-acme",
    "dep:axum",
    "dep:clap",
    "dep:toml",
    "dep:rustls-pemfile",
    "dep:regex",
    "dep:serde_with",
    "dep:tracing-subscriber",
    "native",
]
metrics = ["iroh-metrics/metrics"]
test-utils = ["iroh-relay"]
native = [
    "dep:netdev",
    "dep:hickory-resolver",
    "dep:socket2",
    "dep:surge-ping",
    "dep:igd-next",
    "dep:libc",
    "dep:tokio-stream",
    "pkarr/relay",
    "quinn/runtime-tokio",
    "tokio/net",
    "tokio/fs",
    "tokio/io-std",
    "tokio/signal",
    "tokio/process",
]
wasm = [
    "dep:gloo-timers",
    "dep:web-time",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "backoff/wasm-bindgen",
    "ring/wasm32_unknown_unknown_js",
    "quinn/wasm",
    "quinn/runtime-wasm",
    "quinn-proto/wasm",
    "iroh-base/wasm",
]
local_swarm_discovery = ["dep:swarm-discovery"]

[[bin]]
name = "iroh-relay"
required-features = ["iroh-relay"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "listen"

[[example]]
name = "connect"

[[example]]
name = "listen-unreliable"

[[example]]
name = "connect-unreliable"
